# ytmusicapi-freezable

./: pyproject.toml  readme.md
tests/freeze_test/: test_freezing.py  test_script.py
ytmusicapi/: ytmusic.py
ytmusicapi/freeze_help/: __init__.py  locales.py
