[project]
name = "ytmusicapi-freezeable"
description = "Unofficial API for YouTube Music, a freezable fork"
requires-python = ">=3.8"
authors=[
    {name = "sigma67", email= "ytmusicapi@gmail.com"},
    {name = "Sal Faris", email="9nplnyrz@duck.com"},
]

license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests >= 2.22",
]
dynamic = ["version", "readme"]

[project.scripts]
ytmusicapi = "ytmusicapi.setup:main"

[project.urls]
homepage = "https://github.com/The-Sal/ytmusicapi-freezable"
documentation = "https://ytmusicapi.readthedocs.io"
repository = "https://github.com/The-Sal/ytmusicapi-freezable"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]

[tool.setuptools]
include-package-data=false

[tool.setuptools.package-data]
"*" = ["**.rst", "**.py", "**.mo"]

###############
# DEVELOPMENT #
###############



[tool.coverage.run]
source = ["ytmusicapi"]

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = [ "F403", "F405", "F821", "E731" ]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]

[tool.mypy]
files = [
    "ytmusicapi/"
]
mypy_path = "ytmusicapi"

